# minimalpnp_ROS

./: CMakeLists.txt  README.md  launchSMART_ORBSLAMWithObjTracking.sh  launchUsbCamTest.sh  main.cpp  package.xml
